--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body {
     scroll-behavior: smooth;
 }
 
-
 header {
     position: fixed;
     top: 0;
@@ -24,8 +23,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 10px;
-    background-color: rgba(30, 30, 30, 0.315);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
     z-index: 1000;
     transition: transform 0.3s ease-in-out;
 }
@@ -212,6 +210,19 @@ nav ul li a:hover {
     }
 }
 
+@media screen and (max-width: 360px){
+    .hero2 h1{
+        position: absolute;
+        font-size: 50px;
+        text-shadow:6px 3px 3px rgb(3, 3, 3);
+    }
+
+    .hero2 .buttons img{
+        width: 100px;
+    }
+
+}
+
 /*Trailer*/
 
 .trailer {
@@ -283,6 +294,17 @@ nav ul li a:hover {
 
 .mas div .historia{
     margin-top: 30px;
+}
+
+@media screen and (max-width: 380px){
+    .mas {
+        width: auto;
+        height: auto;
+
+    }
+    .mas div .historia{
+        margin-top: 70px;
+    }
 }
 
 /*Capturas*/
