--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ nav ul li a:hover {
 .hero2{
     display: none;
 }
+
 .hero{
     position: relative;
     height: 100vh;
@@ -150,16 +151,42 @@ nav ul li a:hover {
 }
 
 .hero .timeRelese{
+    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     background: #850000;
+    color: rgb(0, 0, 0);
+    text-align: center;
     position: absolute;
     top: 70px;
     box-shadow: 6px 6px 6px rgb(3, 3, 3);
-    cursor: default;
+}
+
+.countdown {
+    background: #990000;
+    display: flex;
+    gap: none;
+    padding: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+.time-box span {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+.label {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-top: none;
+}
+.separator {
+    font-size: 2.5rem;
+    font-weight: bold;
 }
 
 .hero .timeRelese h3{
+    background: #860101;
+    margin-top: 10px;
     font-family: sans-serif;
     font-size: 25px;
     text-align: center;
@@ -205,12 +232,40 @@ nav ul li a:hover {
     }
 
     .hero2 .timeRelese{
+        font-family: Arial, sans-serif;
+        color: #000000;
         display: flex;
         flex-direction: column;
         background: #850000;
+        text-align: center;
         position: absolute;
         top: 70px;
         box-shadow: 6px 6px 6px rgb(3, 3, 3);
+    }
+
+    .hero2 .timeRelese .countdown {
+        background: #990000;
+        display: flex;
+        gap: none;
+        padding: 10px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+
+    .hero2 .timeRelese .time-box span {
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
+
+    .hero2 .timeRelese .label {
+        font-size: 1rem;
+        font-weight: bold;
+        margin-top: none;
+    }
+
+    .hero2 .timeRelese .separator {
+        font-size: 2.5rem;
+        font-weight: bold;
     }
 
     .hero2 .timeRelese h3{
@@ -256,9 +311,23 @@ nav ul li a:hover {
         text-shadow:6px 3px 3px rgb(3, 3, 3);
     }
 
-    .hero2 .buttons img{
-        width: 100px;
+
+    .hero2 .timeRelese .time-box span {
+        font-size: 1.9rem;
+        font-weight: bold;
     }
+
+    .hero2 .timeRelese .label {
+        font-size: .9rem;
+        font-weight: bold;
+        margin-top: none;
+    }
+
+    .hero2 .timeRelese .separator {
+        font-size: 1.9rem;
+        font-weight: bold;
+    }
+
 
 }
 
